# touchmap

./: .gitignore  README.md  pyproject.toml
src/touchmap/: __init__.py  boolmap.py  encoder.py  grade1.py
src/touchmap/grade1map/: binarydict.py  brailledict.py  core.py  utils.py
src/touchmap/grade2map/: binary2dict.py  braille2dict.py  core.py  word_contract_dict.py
src/touchmap/nummap/: __init__.py  core.py  numdict.py
